--- a/views/write.ejs
+++ b/views/write.ejs
@@ -5,50 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/public/css/myreset.css" />
+    <link rel="stylesheet" href="/public/css/common.css" />
   </head>
   <body>
-    <%- include('nav.ejs')%>
-    <h1>오늘의 할일 작성</h1>
+    <header>
+      <h1>
+        <a href="/">
+          <svg viewBox="0 0 1320 200">
+            <text x="50%" y="50%" dy=".35em" text-anchor="middle">
+              Movie reviews
+            </text>
+          </svg>
+        </a>
+      </h1>
+    </header>
     <form action="/add" method="post">
-      <ul>
+      <ul class="write_wrap">
+        <li>
+          <h2>리뷰 작성</h2>
+          <div class="write_detail">
+            <p>
+              <label>영화제목<input type="text" name="title" /></label>
+            </p>
+            <p>
+              <label>영화url<input type="text" name="Post_url" /></label>
+            </p>
+          </div>
+          <div class="write_select">
+            <p>
+              <label>개봉일 <input type="date" name="date" /></label>
+            </p>
+            <p>
+              <label
+                >장르
+                <select name="genre">
+                  <option value="공포">공포</option>
+                  <option value="멜로">멜로</option>
+                  <option value="코미디">코미디</option>
+                  <option value="다큐">다큐</option>
+                  <option value="판타지">판타지</option>
+                  <option value="액션">액션</option>
+                  <option value="스릴러">스릴러</option>
+                  <option value="사극">사극</option>
+                  <option value="SF">SF</option>
+                  <option value="전쟁">전쟁</option>
+                  <option value="애니메이션">애니메이션</option>
+                  <option value="드라마">드라마</option>
+                  <option value="스포츠">스포츠</option>
+                  <option value="추리">추리</option>
+                  <option value="좀비">좀비</option>
+                  <option value="히어로">히어로</option>
+                  <option value="범죄">범죄</option>
+                </select></label
+              >
+            </p>
+          </div>
+          <input type="submit" value="입력" />
+        </li>
         <li>
           <p>
-            <label>제목 : <input type="text" name="title" /></label>
+            <label class="comment">
+              <textarea name="comment" placeholder="코멘트 입력"></textarea>
+            </label>
           </p>
-          <p>
-            <label>영화url : <input type="text" name="Post_url" /></label>
-          </p>
-          <p>
-            <label>개봉일 : <input type="date" name="date" /></label>
-          </p>
-          <p>
-            <label
-              >장르 :
-              <select name="genre">
-                <option value="공포">공포</option>
-                <option value="멜로">멜로</option>
-                <option value="코미디">코미디</option>
-                <option value="다큐">다큐</option>
-                <option value="판타지">판타지</option>
-                <option value="액션">액션</option>
-                <option value="스릴러">스릴러</option>
-                <option value="사극">사극</option>
-                <option value="SF">SF</option>
-                <option value="전쟁">전쟁</option>
-                <option value="애니메이션">애니메이션</option>
-                <option value="드라마">드라마</option>
-                <option value="스포츠">스포츠</option>
-                <option value="추리">추리</option>
-                <option value="좀비">좀비</option>
-                <option value="히어로">히어로</option>
-                <option value="범죄">범죄</option>
-              </select></label
-            >
-          </p>
-          <p>
-            <label>코멘트 : <input type="text" name="comment" /></label>
-          </p>
-          <input type="submit" value="입력" />
         </li>
       </ul>
     </form>
