--- a/views/write.ejs
+++ b/views/write.ejs
@@ -33,10 +33,10 @@
           <h2>리뷰 작성</h2>
           <div class="write_detail">
             <p>
-              <label>영화제목<input type="text" name="title" /></label>
+              <label>영화제목 <input type="text" name="title" /></label>
             </p>
             <p>
-              <label>영화url<input type="text" name="Post_url" /></label>
+              <label>영화url <input type="text" name="Post_url" /></label>
             </p>
           </div>
           <div class="write_select">
@@ -70,7 +70,7 @@
           </div>
           <input type="submit" value="입력" />
         </li>
-        <li>
+        <li class="comment_wrap">
           <p>
             <label class="comment">
               <textarea name="comment" placeholder="코멘트 입력"></textarea>
