--- a/public/css/common.css
+++ b/public/css/common.css
@@ -326,6 +326,7 @@ form {
 .write_wrap {
   display: flex;
   width: 100%;
+  position: relative;
   text-shadow: 0px 0px 10px #ffffff60;
 }
 .write_wrap li {
@@ -436,6 +437,33 @@ form img {
   width: 120px;
 }
 /* 반응형 */
+@media (max-width: 700px) {
+  .write_wrap{
+    flex-direction: column;
+  }
+  .write_wrap li {
+    width: 100%;
+  }
+  .write_detail input{
+    width: 100%;
+  }
+  .write_select {
+    justify-content: space-between;
+  }
+  input[type="submit"]{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -3%;
+  }
+  input[type="submit"]:hover{
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .comment_wrap{
+    margin: 2rem 0;
+  }
+}
 @media (max-width: 500px) {
   .swiper {
     left: 0;
@@ -444,3 +472,4 @@ form img {
     width: 380px;
   }
 }
+
