--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -35,19 +35,19 @@
           /></span>
           <p hidden>
             <label
-              >번호 : <input type="text" name="id" value="<%= post._id %>"
+              >번호<input type="text" name="id" value="<%= post._id %>"
             /></label>
           </p>
           <div class="write_detail">
             <p>
               <label
-                >제목 :
+                >영화제목 
                 <input type="text" name="title" value="<%= post.title %>"
               /></label>
             </p>
             <p>
               <label
-                >영화url :
+                >영화url
                 <input type="text" name="Post_url" value="<%= post.url %>"
               /></label>
             </p>
@@ -55,13 +55,13 @@
           <div class="write_select">
             <p>
               <label
-                >개봉일 :
+                >개봉일
                 <input type="date" name="date" value="<%= post.date %>"
               /></label>
             </p>
             <p>
               <label
-                >장르 :
+                >장르
                 <select name="genre">
                   <option value="<%= post.genre %>" selected>
                     <%= post.genre %>
@@ -89,7 +89,7 @@
           </div>
           <input type="submit" value="수정" />
         </li>
-        <li>
+        <li class="comment_wrap">
           <p>
             <label class="comment">
               <textarea type="text" name="comment">
