--- a/views/list.ejs
+++ b/views/list.ejs
@@ -35,6 +35,9 @@
           <span class="btn_write__solid"></span>
           <span class="btn_write__text">My Review</span>
         </a>
+        <a class="M_btn_write" href="/write">
+          <img src="/public/img/M_write_icon.svg" alt="리뷰페이지가기" />
+        </a>
       </div>
       <h1>
         <a href="/">
