--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Movie Reviews Edit</title>
     <style>
       @media (max-width: 700px) {
         body {
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="/public/css/myreset.css" />
     <link rel="stylesheet" href="/public/css/common.css" />
-    <link rel="stylesheet" href="/public/css/edit.css" />
+    <script src="/public/js/main.js" defer></script>
   </head>
   <body>
     <header>
@@ -54,10 +54,16 @@
               /></label>
             </p>
             <p>
-              <label
+              <label class="url_wrap"
                 >영화url
-                <input type="text" name="Post_url" value="<%= post.url %>"
-              /></label>
+                <input
+                  type="text"
+                  id="movie_url"
+                  name="Post_url"
+                  value="<%= post.url %>"
+                />
+                <span class="movie_url_log"></span>
+              </label>
             </p>
           </div>
           <div class="write_select">
@@ -94,12 +100,29 @@
               >
             </p>
           </div>
+          <div class="grade_wrap">
+            <p>
+              <label class="grade_p">
+                평점
+                <input
+                  type="number"
+                  name="grade"
+                  value="<%= post.grade%>"
+                  id="input_grade"
+                  min="0"
+                  max="5"
+                  step="0.1"
+                />
+                <span class="grade_log"></span>
+              </label>
+            </p>
+          </div>
           <input type="submit" value="수정" />
         </li>
         <li class="comment_wrap">
           <p>
             <label class="comment">
-              <textarea type="text" name="comment">
+              <textarea type="text" name="comment" maxlength="500">
 <%= post.comment %></textarea
               >
             </label>
