--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie reviews</title>
+    <title>Movie Reviews</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -62,6 +62,7 @@
                 <p class="movie_title"><%= post[list].title %></p>
                 <p>개봉일 : <%= post[list].date %></p>
                 <p>장르 : <%= post[list].genre %></p>
+                <p>평점 : <%= post[list].grade%></p>
                 <p class="comment"><%= post[list].comment %></p>
               </div>
               <button class="delete" data-id=" <%= post[list]._id %>">
