--- a/views/write.ejs
+++ b/views/write.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Movie Reviews Write</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="/public/css/myreset.css" />
     <link rel="stylesheet" href="/public/css/common.css" />
+    <script src="/public/js/main.js" defer></script>
   </head>
   <body>
     <header>
@@ -36,7 +37,10 @@
               <label>영화제목 <input type="text" name="title" /></label>
             </p>
             <p>
-              <label>영화url <input type="text" name="Post_url" /></label>
+              <label class="url_wrap"
+                >영화url <input type="text" id="movie_url" name="Post_url" />
+                <span class="movie_url_log"></span>
+              </label>
             </p>
           </div>
           <div class="write_select">
@@ -68,12 +72,34 @@
               >
             </p>
           </div>
+          <div class="grade_wrap">
+            <p>
+              <label class="grade_p">
+                평점
+                <input
+                  type="number"
+                  id="input_grade"
+                  name="grade"
+                  min="0"
+                  max="5"
+                  step="0.1"
+                />
+                <span class="grade_log"></span>
+              </label>
+            </p>
+          </div>
           <input type="submit" value="입력" />
         </li>
         <li class="comment_wrap">
           <p>
             <label class="comment">
-              <textarea name="comment" placeholder="코멘트 입력"></textarea>
+              <textarea
+                name="comment"
+                id="input_comment"
+                placeholder="코멘트 입력"
+                maxlength="500"
+              ></textarea>
+              <span class="comment_log"></span>
             </label>
           </p>
         </li>
