--- a/views/list.ejs
+++ b/views/list.ejs
@@ -23,6 +23,7 @@
     <!-- <%- include('nav.ejs') %> -->
     <header class="hd">
       <div class="tnb">
+        <!-- 작성페이지 바로가기 버튼 -->
         <a class="btn_write" href="/write">
           <span class="btn_write__outline btn_write__outline--tall">
             <span class="btn_write__line btn_write__line--tall"></span>
@@ -35,6 +36,7 @@
           <span class="btn_write__solid"></span>
           <span class="btn_write__text">My Review</span>
         </a>
+        <!-- 모바일 작성페이지 바로가기 버튼 -->
         <a class="M_btn_write" href="/write">
           <img src="/public/img/M_write_icon.svg" alt="리뷰페이지가기" />
         </a>
