--- a/views/write.ejs
+++ b/views/write.ejs
@@ -88,7 +88,7 @@
               </label>
             </p>
           </div>
-          <input type="submit" value="입력" />
+          <input type="submit" value="입력" disabled />
         </li>
         <li class="comment_wrap">
           <p>
