--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Reviews Edit</title>
-    <style>
-      @media (max-width: 700px) {
-        body {
-          height: 120vh !important;
-        }
-      }
-    </style>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,6 +14,7 @@
     />
     <link rel="stylesheet" href="/public/css/myreset.css" />
     <link rel="stylesheet" href="/public/css/common.css" />
+    <link rel="stylesheet" href="/public/css/sub.css" />
     <script src="/public/js/main.js" defer></script>
   </head>
   <body>
@@ -128,7 +122,7 @@
                 name="comment"
                 maxlength="500"
               >
-<%= post.comment %></textarea
+      <%= post.comment %></textarea
               >
               <span class="comment_log"></span>
             </label>
