--- a/views/write.ejs
+++ b/views/write.ejs
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="/public/css/myreset.css" />
     <link rel="stylesheet" href="/public/css/common.css" />
+    <link rel="stylesheet" href="/public/css/sub.css" />
     <script src="/public/js/main.js" defer></script>
   </head>
   <body>
