--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,6 +18,11 @@
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="/public/css/common.css" />
+    <link
+      href="/public/img/pavicon.ico"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- <%- include('nav.ejs') %> -->
