--- a/views/write.ejs
+++ b/views/write.ejs
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="/public/css/myreset.css" />
     <link rel="stylesheet" href="/public/css/common.css" />
     <link rel="stylesheet" href="/public/css/sub.css" />
+    <link
+      href="/public/img/pavicon.ico"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <script src="/public/js/main.js" defer></script>
   </head>
   <body>
@@ -48,7 +53,7 @@
             <p>
               <label>개봉일 <input type="date" name="date" /></label>
             </p>
-            <p>
+            <p class="select_wrap">
               <label
                 >장르
                 <select name="genre">
@@ -89,7 +94,7 @@
               </label>
             </p>
           </div>
-          <input type="submit" value="입력" disabled />
+          <input class="input" type="submit" value="입력" />
         </li>
         <li class="comment_wrap">
           <p>
