--- a/public/css/common.css
+++ b/public/css/common.css
@@ -377,9 +377,12 @@ form {
 }
 .write_select {
   display: flex;
+  align-items: center;
+  width: 100%;
   height: 30%;
 }
 .write_select p {
+  display: flex;
   padding-top: 1rem;
   width: calc(100% / 2);
 }
@@ -397,12 +400,13 @@ form {
   outline: 1px solid #ffffff;
 }
 .write_select select {
-  padding: 0.3rem;
+  padding: 0.25rem;
   box-shadow: 0px 0px 15px #00000060;
   background-color: #d9d9d9;
   font-size: 0.75rem;
   font-family: var(--font1);
 }
+
 .write_select select:focus {
   outline: 1px solid #ffffff;
   border: none;
@@ -428,6 +432,9 @@ input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.grade_wrap {
+  display: flex;
 }
 .grade_p {
   position: relative;
@@ -534,5 +541,22 @@ form img {
   }
   .swiper-slide-active {
     width: 380px;
+  }
+  .swiper-button-next {
+    top: 60%;
+  }
+  .swiper-button-prev {
+    top: 60%;
+  }
+  .swiper-pagination {
+    bottom: 2%;
+  }
+  .write_select {
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  .select_wrap {
+    justify-content: end;
   }
 }
