--- a/views/write.ejs
+++ b/views/write.ejs
@@ -57,6 +57,7 @@
               <label
                 >장르
                 <select name="genre">
+                  <option value="none">장르선택</option>
                   <option value="공포">공포</option>
                   <option value="멜로">멜로</option>
                   <option value="코미디">코미디</option>
